[package]
name = "fs_rs"
version = "0.1.0"
edition = "2021"
description = "A simple file system information tool written in Rust."
license = "MIT"
homepage = "https://github.com/akshaybabloo/fs_rs"
repository = "https://github.com/akshaybabloo/fs_rs"
keywords = ["file", "system", "information", "tool", "cli"]
authors = ["Akshay Raj Gollahalli <akshay@gollahalli.com>"]
readme = "README.md"
categories = ["command-line-utilities"]

#[[bin]]
#path = "src/main.rs"
#name = "fs"
#test = false

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
comfy-table = "7.1.3"
humansize = "2.1.3"
spinoff = { version = "0.8.0", features = ["dots"] }
sysinfo = "0.33.1"
tempfile = "3.19.0"
